# internal/delivery/http/request/coa_group.go
@@ -1,0 +1,14 @@
+package request
+
+import "github.com/google/uuid"
+
+type COAGroupCreateRequest struct {
+	Code string `validate:"required,min=1" json:"code"`
+	Name string `validate:"required,min=1" json:"name"`
+}
+
+type COAGroupUpdateRequest struct {
+	Id   uuid.UUID
+	Code string `validate:"required,min=1,max=20" json:"code"`
+	Name string `validate:"required,min=1,max=20" json:"name"`
+}
