# internal/delivery/http/route/route.go
@@ -13,6 +13,9 @@ type RouteConfig struct {
 	AuthHandler      *handler.AuthHandler
 	AuthMiddleware   fiber.Handler
 	DashboardHandler *handler.DashboardHandler
+	COAGroupHandler  *handler.COAGroupHandler
+	// COASubGroupHandler *handler.COASubGroupHandler
+	// COAHandler         *handler.COAHandler
 }
 
 func (rc *RouteConfig) Setup() {
@@ -24,15 +27,20 @@ func (rc *RouteConfig) SetupGuestRoute() {
 	rc.App.Post("/api/v1/auth/login", rc.AuthHandler.Login)
 	rc.App.Post("/api/v1/auth/refresh", rc.AuthHandler.Refresh)
 
-	rc.App.Get("/api/v1/dashboard/overview", rc.DashboardHandler.Overview)
-
 	rc.App.Get("/swagger/*", swagger.HandlerDefault)
+
+	rc.App.Post("/api/v1/coa_groups", rc.COAGroupHandler.Create)
+	rc.App.Get("/api/v1/coa_groups", rc.COAGroupHandler.FindAll)
+	rc.App.Get("/api/v1/coa_groups/:id", rc.COAGroupHandler.FindById)
+	rc.App.Put("/api/v1/coa_groups/:id", rc.COAGroupHandler.Update)
+	rc.App.Delete("/api/v1/coa_groups/:id", rc.COAGroupHandler.Delete)
 }
 
 func (rc *RouteConfig) SetupAuthRoute() {
 	rc.App.Use(rc.AuthMiddleware)
 	rc.App.Post("/api/v1/auth/logout", rc.AuthHandler.Logout)
-	// rc.App.Post("/api/v1/auth/me", rc.AuthHandler.Me)
+
+	rc.App.Get("/api/v1/dashboard/overview", rc.DashboardHandler.Overview)
 
 	rc.App.Post("/api/v1/users", rc.UserHandler.Create)
 	rc.App.Get("/api/v1/users", rc.UserHandler.FindAll)
